@@ -538,7 +538,7 @@ static void g_print_ast_array_size( g_state_t const *g, c_ast_t const *ast ) {
 static void g_print_ast_bit_width( g_state_t const *g, c_ast_t const *ast ) {
   assert( g != NULL );
   assert( ast != NULL );
-  assert( is_1_bit_only_in_set( ast->kind, K_BUILTIN | K_TYPEDEF ) );
+  assert( is_1_bit_only_in_set( ast->kind, K_ANY_BIT_WIDTH ) );
 
   if ( ast->as.builtin.bit_width > 0 )
     FPRINTF( g->gout, " : %u", ast->as.builtin.bit_width );
