@@ -1,0 +1,4 @@
+EXPECTED_EXIT=65
+cdecl <<END
+explain _Alignas(4) char c : 3
+END
